fixing contour, positions are good, but path is still clipped?

--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,10 @@ h3 {
     fill: var(--darker);
 }
 
+.selected {
+    fill: red !important;
+}
+
 
 /* old toggles */
 /* .switch {
@@ -723,7 +727,7 @@ input:checked + .slider:before {
 
 canvas {
     width: 100%;
-    height: 95%;
+    height: 100%;
 }
 
 
@@ -905,3 +909,35 @@ hr {
     margin-top: 4px;
     margin-bottom: 4px;
 }
+
+
+
+
+/* pulse */
+/* circle {
+  stroke: black; 
+  stroke-width: 2px;
+  stroke-opacity: 1;
+}
+
+.pulse {
+  fill: white;
+  fill-opacity: 0;
+  transform-origin: 50% 50%;
+  animation-duration: 2s;
+  animation-name: pulse;
+  animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+  from {
+    stroke-width: 3px;
+    stroke-opacity: 1;
+    transform: scale(0.3);
+  }
+  to {
+    stroke-width: 0;
+    stroke-opacity: 0;
+    transform: scale(2);
+  }
+} */
